# research-swarm

./: .gitignore  README.md  pyproject.toml
swarm/: __init__.py  __main__.py  cli.py  coordinator.py
swarm/agents/: __init__.py  base.py  critic.py  data.py  literature.py  search.py  synthesis.py
