[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-swarm"
version = "0.1.0"
description = "Multi-agent research system - parallel AI specialists for comprehensive research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edwin Isac", email = "edwinisac007@gmail.com" }
]
keywords = ["ai", "agents", "research", "multi-agent", "llm", "swarm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
tavily = ["tavily-python>=0.3.0"]

[project.scripts]
swarm = "swarm.cli:main"

[project.urls]
Homepage = "https://github.com/edwiniac/research-swarm"
Repository = "https://github.com/edwiniac/research-swarm"
Issues = "https://github.com/edwiniac/research-swarm/issues"

[tool.hatch.build.targets.wheel]
packages = ["swarm"]
